# metafspm

./: README.md  pyproject.toml  setup.py
.github/workflows/: conda-build.yml
conda/: environment.yaml  environment.yml  meta.yaml
doc/: api.rst  conf.py  guide.rst  index.rst  user.md  user.rst
doc/_templates/: custom-class-template.rst  custom-module-template.rst
doc/source/: conf.py  user.rst
generic_fspm/: component.py  component_factory.py  composite_wrapper.py  field_consensus.py
generic_fspm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
genericmodel/: component.py  component_factory.py  composite_wrapper.py
genericmodel.egg-info/: PKG-INFO  SOURCES.txt
metafspm/: component.py  component_factory.py  composite_wrapper.py  scene_wrapper.py
metafspm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/openalea/metafspm/: component.py  component_factory.py  composite_wrapper.py  scene_wrapper.py  specializer.py  utils.py
test/: dummy_components.py  test_arraydict.py  test_choregrapher_reinit.py  test_component_base.py  test_field_consensus.py  test_impossible_multiple_instances.py  test_model1.py  test_model2.py  test_model_assembly.py  test_model_carbon.py  test_several_instances.py  test_several_same_model.py  test_single_model_init.py  test_single_model_run.py  test_wrapper.py  utils.py
test/inputs/: coupling_translator.yaml  dummy_temperatures.csv
